clusters/home/network-policies/cnpg.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cnpg
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgresql
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
