clusters/home/network-policies/deny-nas.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-nas
spec:
  endpointSelector: {}
  enableDefaultDeny:
    egress: false
    ingress: false
  egressDeny:
    - toCIDRSet:
        - cidr: 192.168.1.135/32
        - cidr: 100.117.76.5/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
            - port: "2049"
              protocol: UDP
            - port: "111"
              protocol: TCP
            - port: "111"
              protocol: UDP
            - port: "20048"
              protocol: TCP
            - port: "20048"
              protocol: UDP
            - port: "22"
              protocol: TCP
            - port: "80"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: deny-nas-api
spec:
  endpointSelector:
    matchExpressions:
      - key: policy.mcswain.dev/nas-api
        operator: NotIn
        values:
          - "true"
  enableDefaultDeny:
    egress: false
    ingress: false
  egressDeny:
    - toCIDRSet:
        - cidr: 192.168.1.135/32
        - cidr: 100.117.76.5/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
