clusters/home/network-policies/egress-coredns.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-coredns
spec:
  endpointSelector:
    matchExpressions:
      - key: policy.mcswain.dev/egress-coredns
        operator: In
        values:
          - "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
