clusters/home/network-policies/egress-lan.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-lan
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/egress-lan: "true"
  egress:
    - toCIDRSet:
        - cidr: 192.168.0.0/16
