clusters/home/network-policies/egress-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-namespace
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/egress-namespace: "true"
  egress:
    - toEndpoints:
        - {}
