clusters/home/network-policies/egress-nginx.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-nginx
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/egress-nginx: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
