clusters/home/network-policies/ingress-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-namespace
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/ingress-namespace: "true"
  ingress:
    - fromEndpoints:
        - {}
