clusters/home/network-policies/ingress-nginx.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/ingress-nginx: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
