clusters/home/network-policies/ingress-nodes.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-nodes
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/ingress-nodes: "true"
  ingress:
    - fromEntities:
      - host
      - remote-node
