clusters/home/network-policies/ingress-prometheus.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-prometheus
spec:
  endpointSelector:
    matchLabels:
      policy.mcswain.dev/ingress-prometheus: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
